fix(rocksdb): harden paged startup recovery